# bonk

./: Cargo.toml  Dockerfile  deploy.ps1
.github/workflows/: deploy.yml
infra/: main.tf  outputs.tf  variables.tf
src/: ast.rs  eval.rs  expr.lalrpop  main.rs  repl.rs  server.rs
static/: index.html
