[package]
name = "bonk"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
lalrpop = "0.22"

[dependencies]
lalrpop-util = { version = "0.22", features = ["lexer"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
rust_decimal = { version = "1", features = ["maths"] }
rand = "0.8"
